client/src/Parser.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.2 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions: {[id: string]: any} = { Program: peg$parseProgram };
  let peg$startRuleFunction: () => any = peg$parseProgram;

  const peg$c0 = function(stmts: any) {
      return stmts.map(function(element) {
        return element[1];
      });
    };
  const peg$c1 = "#";
  const peg$c2 = peg$literalExpectation("#", false);
  const peg$c3 = "\n";
  const peg$c4 = peg$literalExpectation("\n", false);
  const peg$c5 = peg$anyExpectation();
  const peg$c6 = function() {
      return { kind: "comment", value: text() }
    };
  const peg$c7 = function(id: any) {
      return { id: id };
    };
  const peg$c8 = peg$otherExpectation("function");
  const peg$c9 = "fun";
  const peg$c10 = peg$literalExpectation("fun", false);
  const peg$c11 = "(";
  const peg$c12 = peg$literalExpectation("(", false);
  const peg$c13 = ")";
  const peg$c14 = peg$literalExpectation(")", false);
  const peg$c15 = ":";
  const peg$c16 = peg$literalExpectation(":", false);
  const peg$c17 = "end";
  const peg$c18 = peg$literalExpectation("end", false);
  const peg$c19 = function(id: any, params: any, returnType: any, stmts: any) {
      return {
        kind: "function",
        name: id,
        params: params,
        returnTypeName: returnType != null ? returnType[2] : null,
        block: stmts.map(function(element) { return element[1]; }),
        location: location()
      };
    };
  const peg$c20 = function(name: any, typeName: any) {
      return {
        name: name,
        typeName: typeName
      }
    };
  const peg$c21 = ",";
  const peg$c22 = peg$literalExpectation(",", false);
  const peg$c23 = function(params: any) {
      if (params == null) return [];
      var head = params[0];
      params = params[1].map(function(element) {
        return element[3];
      })
    	params.unshift(head);
      return params;
    };
  const peg$c24 = "record";
  const peg$c25 = peg$literalExpectation("record", false);
  const peg$c26 = function(name: any, fields: any) {
      return {
        kind: "record",
        name: name,
        fields: fields,
        location: location()
      }
    };
  const peg$c27 = function(fields: any) {
      if (fields == null) return [];
      var head = fields[0];
      fields = fields[1].map(function(element) {
        return element[1];
      })
    	fields.unshift(head);
      return fields;
    };
  const peg$c28 = "var";
  const peg$c29 = peg$literalExpectation("var", false);
  const peg$c30 = "=";
  const peg$c31 = peg$literalExpectation("=", false);
  const peg$c32 = function(id: any, typeName: any, init: any) {
      return {
        kind: "variable",
        name: id,
        typeName: typeName? typeName[2] : null,
        value: init,
        location: location()
      };
    };
  const peg$c33 = function(id: any, value: any) {
      return {
        kind: "assignment",
        id: id,
        value: value,
        location: location()
      };
    };
  const peg$c34 = "repeat";
  const peg$c35 = peg$literalExpectation("repeat", false);
  const peg$c36 = "times";
  const peg$c37 = peg$literalExpectation("times", false);
  const peg$c38 = function(count: any, stmts: any) {
      return {
        kind: "repeat",
        count: count,
        block: stmts.map(function(element) { return element[1]; }),
        location: location()
      };
    };
  const peg$c39 = "while";
  const peg$c40 = peg$literalExpectation("while", false);
  const peg$c41 = "do";
  const peg$c42 = peg$literalExpectation("do", false);
  const peg$c43 = function(cond: any, stmts: any) {
      return {
        kind: "while",
        condition: cond,
        block: stmts.map(function(element) { return element[1]; }),
        location: location()
      };
    };
  const peg$c44 = "if";
  const peg$c45 = peg$literalExpectation("if", false);
  const peg$c46 = "then";
  const peg$c47 = peg$literalExpectation("then", false);
  const peg$c48 = "elseif";
  const peg$c49 = peg$literalExpectation("elseif", false);
  const peg$c50 = "else";
  const peg$c51 = peg$literalExpectation("else", false);
  const peg$c52 = function(cond: any, trueBlock: any, elseIfs: any, falseBlock: any) {
      if (elseIfs.length > 0) {
      	elseIfs[0] = 0
      }

      return {
      	kind: "if",
        condition: cond,
        trueBlock: trueBlock.map(function(element) { return element[1]; }),
        elseIfs: elseIfs,
        falseBlock: falseBlock ? falseBlock[2].map(function(element) { return element[1]; }) : [],
        location: location()
  	  }
    };
  const peg$c53 = "return";
  const peg$c54 = peg$literalExpectation("return", false);
  const peg$c55 = function(value: any) {
      return {
        kind: "return",
        value: value,
        location: location()
      }
    };
  const peg$c56 = "break";
  const peg$c57 = peg$literalExpectation("break", false);
  const peg$c58 = function() {
      return {
        kind: "break",
        location: location()
      }
    };
  const peg$c59 = "continue";
  const peg$c60 = peg$literalExpectation("continue", false);
  const peg$c61 = function() {
      return {
        kind: "continue",
        location: location()
      }
    };
  const peg$c62 = "and";
  const peg$c63 = peg$literalExpectation("and", false);
  const peg$c64 = "or";
  const peg$c65 = peg$literalExpectation("or", false);
  const peg$c66 = "xor";
  const peg$c67 = peg$literalExpectation("xor", false);
  const peg$c68 = function(head: any, tail: any) {
      if (tail.length == 0) return head;

    	return tail.reduce(function(result, element) {
      	return {
            kind: "binaryOp",
            operator: element[1],
            left: result,
            right: element[3],
            location: location()
          }
      }, head);
    };
  const peg$c69 = "<=";
  const peg$c70 = peg$literalExpectation("<=", false);
  const peg$c71 = ">=";
  const peg$c72 = peg$literalExpectation(">=", false);
  const peg$c73 = "<";
  const peg$c74 = peg$literalExpectation("<", false);
  const peg$c75 = ">";
  const peg$c76 = peg$literalExpectation(">", false);
  const peg$c77 = "==";
  const peg$c78 = peg$literalExpectation("==", false);
  const peg$c79 = "!=";
  const peg$c80 = peg$literalExpectation("!=", false);
  const peg$c81 = "+";
  const peg$c82 = peg$literalExpectation("+", false);
  const peg$c83 = "-";
  const peg$c84 = peg$literalExpectation("-", false);
  const peg$c85 = "..";
  const peg$c86 = peg$literalExpectation("..", false);
  const peg$c87 = "*";
  const peg$c88 = peg$literalExpectation("*", false);
  const peg$c89 = "/";
  const peg$c90 = peg$literalExpectation("/", false);
  const peg$c91 = "not";
  const peg$c92 = peg$literalExpectation("not", false);
  const peg$c93 = function(op: any, factor: any) {
    	if (!op) return factor;
      return {
      	kind: "unaryOp",
          operator: op[0],
          value: factor,
          location: location() // TODO should use location of op
      };
    };
  const peg$c94 = function(expr: any) { return expr; };
  const peg$c95 = peg$otherExpectation("function call or variable name");
  const peg$c96 = function(id: any, access: any) {
    	if (access === null) {
        return {
          kind: "variableAccess",
          name: id,
          location: location()
        }
      } else {
      	if (access.length == 1 && access[0].kind == "arguments") {
            return {
              kind: "functionCall",
              name: id,
              args: access[0].args,
              location: location()
            }
          }

          var parent = {
            kind: "variableAccess",
            name: id,
            location: location()
          };

          access.map(function (el) {
          	if (el.kind == "fieldAccess") {
              	el.record = parent;
              	parent = el;
              } else if (el.kind == "arrayAccess") {
              	el.array = parent;
              	parent = el;
              }
          });
          return parent;
      }
    };
  const peg$c97 = ".";
  const peg$c98 = peg$literalExpectation(".", false);
  const peg$c99 = function(id: any) {
    	return {
  		kind: "fieldAccess",
          record: null,
  		name: id,
          location: location()
      }
    };
  const peg$c100 = "[";
  const peg$c101 = peg$literalExpectation("[", false);
  const peg$c102 = "]";
  const peg$c103 = peg$literalExpectation("]", false);
  const peg$c104 = function(index: any) {
    	return {
      	kind: "arrayAccess",
          array: null,
          index: index,
          location: location()
      }
    };
  const peg$c105 = peg$otherExpectation("arguments");
  const peg$c106 = function(args: any) {
      if (args == null) return { kind: "arguments", args: [] };
      var head = args[0];
      args = args[1].map(function(element) {
        return element[3];
      })
  	  args.unshift(head);
      return {
      	kind: "arguments",
      	args: args
      };
    };
  const peg$c107 = peg$otherExpectation("number");
  const peg$c108 = /^[0-9]/;
  const peg$c109 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c110 = function() {
      return {
        kind: "number",
        value: parseFloat(text()),
        location: location()
      };
    };
  const peg$c111 = peg$otherExpectation("boolean");
  const peg$c112 = "false";
  const peg$c113 = peg$literalExpectation("false", false);
  const peg$c114 = "true";
  const peg$c115 = peg$literalExpectation("true", false);
  const peg$c116 = function() {
   	return {
      	kind: "boolean",
        value: text() == "true",
        location: location()
      };
   };
  const peg$c117 = peg$otherExpectation("string");
  const peg$c118 = function(chars: any) {
      return {
        kind: "string",
        value: chars,
        location: location()
      };
    };
  const peg$c119 = "\"";
  const peg$c120 = peg$literalExpectation("\"", false);
  const peg$c121 = function(chars: any) { return chars.join(''); };
  const peg$c122 = "'";
  const peg$c123 = peg$literalExpectation("'", false);
  const peg$c124 = "\\";
  const peg$c125 = peg$literalExpectation("\\", false);
  const peg$c126 = function(char: any) { return char; };
  const peg$c127 = function(sequence: any) { return sequence; };
  const peg$c128 = "b";
  const peg$c129 = peg$literalExpectation("b", false);
  const peg$c130 = function() { return "\b";   };
  const peg$c131 = "f";
  const peg$c132 = peg$literalExpectation("f", false);
  const peg$c133 = function() { return "\f";   };
  const peg$c134 = "n";
  const peg$c135 = peg$literalExpectation("n", false);
  const peg$c136 = function() { return "\n";   };
  const peg$c137 = "r";
  const peg$c138 = peg$literalExpectation("r", false);
  const peg$c139 = function() { return "\r";   };
  const peg$c140 = "t";
  const peg$c141 = peg$literalExpectation("t", false);
  const peg$c142 = function() { return "\t";   };
  const peg$c143 = "v";
  const peg$c144 = peg$literalExpectation("v", false);
  const peg$c145 = function() { return "\x0B"; };
  const peg$c146 = peg$otherExpectation("identifier");
  const peg$c147 = function() {
      return {
        location: location(),
        value: text()
      };
    };
  const peg$c148 = /^[a-zA-Z_]/;
  const peg$c149 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  const peg$c150 = /^[a-zA-Z_0-9]/;
  const peg$c151 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false);
  const peg$c152 = peg$otherExpectation("whitespace");
  const peg$c153 = /^[ \t\n\r]/;
  const peg$c154 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  const peg$c155 = function() { return "whitespace"; };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseProgram(): any {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseStatement();
        if (s5 === peg$FAILED) {
          s5 = peg$parseFunction();
          if (s5 === peg$FAILED) {
            s5 = peg$parseRecord();
          }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s4 = [s4, s5, s6];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseStatement();
          if (s5 === peg$FAILED) {
            s5 = peg$parseFunction();
            if (s5 === peg$FAILED) {
              s5 = peg$parseRecord();
            }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseComment(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 35) {
      s1 = peg$c1;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 10) {
        s5 = peg$c3;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = undefined;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        if (input.charCodeAt(peg$currPos) === 10) {
          s5 = peg$c3;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = undefined;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s3 === peg$FAILED) {
          s3 = peg$currPos;
          peg$silentFails++;
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          peg$silentFails--;
          if (s4 === peg$FAILED) {
            s3 = undefined;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseType(): any {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseFunction(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;
